# MasterThesis

./: .gitattributes  .gitignore
example/: CMakeLists.txt  main.cc
include/: file.json  secrets.h  setup.c  setup.h
include/ftp/: FtpClient.h
include/stitcher/: common.h  stitcher.h
